--- a/style.css
+++ b/style.css
@@ -1,1 +1,125 @@
 /* Write your CSS below. Try to make it responsive (i.e. no horizontal scroll) */
+
+<style>
+.example {
+  padding: 20px;
+  color: white;
+}
+
+@media only screen and (max-width: 600px) {
+	.image
+	{
+		width:200px;
+		height:200px;
+	}
+  .topnav a:not(:first-child) {display: none;}
+  .topnav a.icon {
+    float: right;
+    display: block;
+  }
+  
+  .topnav.responsive {position: relative;}
+  .topnav.responsive .icon {
+    position: absolute;
+    right: 0;
+    top: 0;
+  }
+  .topnav.responsive a {
+    float: none;
+    display: block;
+    text-align: left;
+  }
+}
+
+@media only screen and (min-width: 600px) {
+  .example {background: green;}
+  .image
+	{
+		width:200px;
+		height:300px;
+	}
+}
+
+@media only screen and (min-width: 768px) {
+  .example {background: blue;}
+  .image
+	{
+		width:200px;
+		height:300px;
+	}
+} 
+
+@media only screen and (min-width: 992px) {
+  .example {background: orange;}
+  .image
+	{
+		width:200px;
+		height:300px;
+	}
+} 
+
+@media only screen and (min-width: 1200px) {
+  .example {background: pink;}
+  .image
+	{
+		width:200px;
+		height:300px;
+	}
+}
+
+.col-1 {width: 8.33%;}
+.col-2 {width: 16.66%;}
+.col-3 {width: 25%;}
+.col-4 {width: 33.33%;}
+.col-5 {width: 41.66%;}
+.col-6 {width: 50%;}
+.col-7 {width: 58.33%;}
+.col-8 {width: 66.66%;}
+.col-9 {width: 75%;}
+.col-10 {width: 83.33%;}
+.col-11 {width: 91.66%;}
+.col-12 {width: 100%;}
+
+body {
+  margin: 0;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+.topnav {
+  overflow: hidden;
+  background-color: #FFF;
+}
+
+.topnav a {
+  float: right;
+  display: block;
+  color: #000;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 17px;
+}
+
+.topnav a:hover {
+  background-color: #ddd;
+  color: black;
+}
+
+.active {
+  background-color: #CCC;
+  color: #000;
+}
+
+.topnav .icon {
+  display: none;
+}
+.checked {
+  color: orange;
+}
+
+.txt_color
+{
+	color:#F3C
+}
+
+</style>
